# pg-tables

./: .gitignore  Cargo.toml
src/: app.rs  components.rs  db.rs  faker.rs  main.rs  schema_format.rs  style.rs
src/config/: mod.rs  session.rs
src/db/: connection.rs  fake_columns.rs  metadata.rs  mod.rs  query.rs  schema.rs  search.rs
src/faker/: hints.rs  mod.rs  types.rs  utils.rs
src/schema/: dialects.rs  mod.rs
src/tabs/: create_script.rs  fake_data.rs  mod.rs  query.rs  search.rs  tables.rs  views.rs
src/ui/: mod.rs
src/ui/components/: actions.rs  list.rs  mod.rs  widgets.rs
src/ui/tabs/: create_script.rs  fake_data.rs  mod.rs  query.rs  search.rs  tables.rs  views.rs
