[package]
name = "pg_tables"
version = "0.2.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
eframe = "0.33"
rfd = "0.15"
dirs = "6"
rand = "0.8"
fake = { version = "2.9", features = ["derive"] }
